--- a/.lvimrc
+++ b/.lvimrc
@@ -1,3 +1,3 @@
-let b:syntastic_c_cflags = '-isystem /usr/include/libnl3'
+let b:syntastic_c_cflags = '-isystem /usr/include/libnl3 -isystem /usr/include/lua5.2'
 let g:syntastic_c_compiler = 'clang'
 
