--- a/namespace/Cargo.toml
+++ b/namespace/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
 
 [dependencies]
+netlink = { path = "../netlink" }
+
 error-chain = "0.10.0"
 libc = "0.2.28"
 nix = "0.9.0"
