--- a/namespace/Cargo.toml
+++ b/namespace/Cargo.toml
@@ -7,5 +7,6 @@ authors = ["Chris West (Faux) <git@goeswhere.com>"]
 netlink = { path = "../netlink" }
 
 error-chain = "0.10.0"
+exec = "0.3.0"
 libc = "0.2.28"
 nix = "0.9.0"
