--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
 
 [dependencies]
+fdns-parse = { path = "../../fdns/parse" }
 namespace = { path = "../namespace" }
 
 byteorder = "1"
