--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -13,5 +13,4 @@ error-chain = "0.11"
 hex = "0.3"
 itertools = "0.7"
 mio = "0.6"
-# until https://github.com/courvoif/pcap-file/pull/4 is merged
-pcap-file = { git = "https://github.com/FauxFaux/pcap-file", branch = "error-11" }
+pcap-file = "0.10"
