--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -12,5 +12,7 @@ cast = "0.2"
 error-chain = "0.11"
 hex = "0.3"
 itertools = "0.7"
+log = "0.4"
 mio = "0.6"
 pcap-file = "0.10"
+pretty_env_logger = "0.2"
