--- a/netlink/Cargo.toml
+++ b/netlink/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
 build = "build.rs"
 
+edition = "2018"
+
 [dependencies]
 libc = "0.2"
 
