--- a/namespace/Cargo.toml
+++ b/namespace/Cargo.toml
@@ -3,6 +3,8 @@ name = "namespace"
 version = "0.1.0"
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
 
+edition = "2018"
+
 [dependencies]
 netlink = { path = "../netlink" }
 
