--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -3,6 +3,8 @@ name = "tool"
 version = "0.1.0"
 authors = ["Chris West (Faux) <git@goeswhere.com>"]
 
+edition = "2018"
+
 [dependencies]
 fdns-format = { path = "../../fdns/format" }
 namespace = { path = "../namespace" }
