--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2018"
 fdns-format = { path = "../../fdns/format" }
 namespace = { path = "../namespace" }
 
+anyhow = "1"
 byteorder = "1"
 cast = "0.2"
-error-chain = "0.11"
 hex = "0.3"
 itertools = "0.7"
 log = "0.4"
